--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,47 +1,65 @@
 @import url('https://fonts.googleapis.com/css?family=Exo+2&display=swap');
 
 * {
-  font-family: "Exo 2";   
-  font-weight:300;
+  font-family: "Exo 2";
+  font-weight: 300;
 }
-body{            
+
+body {
   background: linear-gradient(45deg, rgb(104, 172, 255) 0%, rgba(135, 92, 207, 1) 29%, rgba(188, 53, 169, 1) 65%, rgba(251, 8, 129, 1) 100%);
-  background-image: radial-gradient( circle farthest-corner at 12.3% 19.3%,  rgba(85,88,218,1) 0%, rgba(95,209,249,1) 100.2% );
-  background: linear-gradient( to bottom,   #fff 80%, #eee    );
-  
-  min-height:100vh;    
-  margin:0;
-  color:black;
-  font-family: "Exo 2";       
+  background-image: radial-gradient(circle farthest-corner at 12.3% 19.3%, rgba(85, 88, 218, 1) 0%, rgba(95, 209, 249, 1) 100.2%);
+  background: linear-gradient(to bottom, #fff 80%, #eee);
+
+  min-height: 100vh;
+  margin: 0;
+  color: black;
+  font-family: "Exo 2";
 }
+
 h1 {
   font-Weight: 800;
   letter-spacing: 1px;
-  margin-top:0em;
+  margin-top: 0em;
   line-height: 1;
 }
+
 h4 {
-  margin-bottom:0em;
+  margin-bottom: 0em;
   font-variant: small-caps;
   letter-spacing: 2px;
-  color:grey;
-  font-size:1em;
+  color: grey;
+  font-size: 1em;
 }
+
 header {
-  display:flex;                
-  width:100%;
-  height:3.5em;
-  justify-content:space-between;
+  display: flex;
+  width: 100%;
+  height: 3.5em;
+  justify-content: space-between;
   align-items: center;
-  position:fixed;     
-  z-index:2;  
-  background:white;
-  border-bottom:1px solid rgba(0,0,0,0.15);
+  position: fixed;
+  z-index: 2;
+  background: white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
 }
+
 header label {
-  margin-left:1.5em;    
-  color:dodgerblue;
-  font-weight:800;      
+  margin-left: 1.5em;
+  color: dodgerblue;
+  font-weight: 800;
+}
+
+header label div a {
+  display: flex;
+  align-Items: center;
+  text-decoration: none;
+  color: dodgerblue;
+}
+
+header .icon-svg {
+  margin: 0;
+  height: 2em;
+  fill: black;
 }
 
 .menuToggle {
@@ -49,10 +67,10 @@ header label {
   width: 3em;
   height: 2em;
   margin: 30px auto 10px;
-  border:none;
-  background:none;
-  margin: 0 0.5em 0  0 ;
-  cursor:pointer;
+  border: none;
+  background: none;
+  margin: 0 0.5em 0 0;
+  cursor: pointer;
 }
 
 .menuToggle span:after,
@@ -62,9 +80,11 @@ header label {
   left: 0;
   top: -9px;
 }
-.menuToggle span:after{
+
+.menuToggle span:after {
   top: 9px;
 }
+
 .menuToggle span {
   position: relative;
   display: block;
@@ -84,150 +104,177 @@ header label {
 .menuToggle.active span {
   background-color: transparent;
 }
+
 .menuToggle.active span:before {
   transform: rotate(45deg) translate(5px, 5px);
 }
+
 .menuToggle.active span:after {
   transform: rotate(-45deg) translate(7px, -8px);
 }
 
- 
+
 
 .container {
-  display:flex;
-  flex:1;
-  width:100%;
-  height:100%;
+  display: flex;
+  flex: 1;
+  width: 100%;
+  height: 100%;
 }
+
 nav {
-  display:flex;                      
-  height:calc(100% - 3.5em);
-  
-  
-  margin-top:3.5em;
-  width:15em;
-  position:fixed;
+  display: flex;
+  height: calc(100% - 3.5em);
+
+
+  margin-top: 3.5em;
+  width: 15em;
+  position: fixed;
   flex-direction: column;
-  box-shadow: 2px 0 10px rgba(0,0,0,0.15);
+  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.15);
   align-items: center;
-  text-align:center;
-  z-index:1;
-  margin-left: -15em;                                  
+  text-align: center;
+  z-index: 1;
+  margin-left: -15em;
   transition: all .33s ease-out;
 }
+
 nav.active {
-  margin-left: 0em;                                  
+  margin-left: 0em;
 }
 
-nav a,section nav a {
-  width:100%;
+nav a,
+section nav a {
+  width: 100%;
   display: flex;
-  align-items: center;            
-  
-  font-variant:small-caps;
-  font-weight:600;         
+  align-items: center;
+
+  font-variant: small-caps;
+  font-weight: 600;
   font-style: italic;
   letter-spacing: 1px;
-  
-  position:relative;
+  cursor: pointer;
+  position: relative;
   text-decoration: none;
-  color:black;
-  padding: 0.75em 0  0.75em 0;
+  color: black;
+  padding: 0.75em 0 0.75em 0;
   overflow: 8px;
   outline: none;
-  background:white;
-  transition: all 0.35s ease-out ;
-}
-nav a:before,section nav a:before {
-  content:"";
-  position: absolute;
-  width:0;
-  transition: all 0.35s ease-out ;
+  background: white;
+  transition: all 0.35s ease-out;
 }
 
-main section nav{
-  display:flex;
+nav a:before,
+section nav a:before {
+  content: "";
+  position: absolute;
+  width: 0;
+  transition: all 0.35s ease-out;
+}
+
+main section nav {
+  display: flex;
   margin: 0;
   flex-direction: row;
   height: auto;
   position: relative;
-  width:auto;
+  width: auto;
   justify-content: space-around;
 }
 
-nav .icon-svg, section nav .icon-svg,section svg {
-  height:1.5em;
+nav .icon-svg,
+section nav .icon-svg,
+section svg {
+  height: 1.5em;
   fill: rgb(204, 204, 204);
-  margin: 0 0.75em 0 1.5em ;
-  transition: all 0.35s ease-out ;
+  margin: 0 0.75em 0 1.5em;
+  transition: all 0.35s ease-out;
 }
 
-nav a.active:before,nav a:hover:before,section nav a:hover:before {
-  content:"";
-  position:absolute;
-  width:0.25em;
-  height:100%;
-  
+nav a.active:before,
+nav a:hover:before,
+section nav a:hover:before {
+  content: "";
+  position: absolute;
+  width: 0.25em;
+  height: 100%;
+
   background: dodgerblue;
 }
-nav a.active,nav a:hover,section nav a:hover,nav a.active .icon-svg, nav a:hover .icon-svg, section nav a:hover .icon-svg{
-  fill:dodgerblue; 
-  color:dodgerblue;
-  font-weight:800; 
+
+nav a.active,
+nav a:hover,
+section nav a:hover,
+nav a.active .icon-svg,
+nav a:hover .icon-svg,
+section nav a:hover .icon-svg {
+  fill: dodgerblue;
+  color: dodgerblue;
+  font-weight: 800;
 }
 
 main section nav a {
-  display:inline;
-  background:none;
-  
-} 
+  display: inline;
+  background: none;
+
+}
+
 main section nav a:hover {
-  color:white;
-  background:none;
-  
+  color: white;
+  background: none;
+
 }
 
 main {
-  margin-top:3.5em;
-  background:rgba(60,60,60,0.1);
+  margin-top: 3.5em;
+  background: rgba(60, 60, 60, 0.1);
 
-  
- flex:1;
- margin-left: 0em;
- transition: all 0.35s ease-out ;
- min-height:calc(100vh - 4em);
- 
+
+  flex: 1;
+  margin-left: 0em;
+  transition: all 0.35s ease-out;
+  min-height: calc(100vh - 4em);
+
 }
+
 main.active {
-  margin-left: 15em;                                  
+  margin-left: 15em;
 }
+
 section .container {
   width: calc(100vw - 20em);
   flex-wrap: wrap;
   justify-content: center;
 }
+
 main section .container {
-  width:100%;
+  width: 100%;
 }
+
 section {
-  padding:0 3vmin 3vmin 3vmin;
+  padding: 0 3vmin 3vmin 3vmin;
 }
+
+label {
+  font-weight: 800;
+}
+
 .field {
   width: 100%;
-  margin-top:1em;
+  margin-top: 2em;
   position: relative;
-  
+
 }
 
 .fieldrow {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  width:100%;
+  width: 100%;
 }
 
 .fieldrow .field {
-  flex:1;
+  flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -238,7 +285,12 @@ section {
   margin: 0;
 }
 
-.field>input,.box>input {
+.fieldrow a {
+  flex: 1;
+}
+
+.field>input,
+.box>input {
   width: 100%;
   font-size: 1em;
   display: inline-block;
@@ -253,92 +305,555 @@ section {
   text-align: center;
 }
 
-.box button {
-  margin-top:1em;
-  background:dodgerblue;
-  color:white;
-  border:none;
-  border-radius:0.5em;
-  height:3em;
-  font-size:1em;
-}
-
-.stats,.activity,.box,.activities {
-  flex:1;
-  margin:1em;
-  
-  min-height:5em;
-  box-shadow: 0 2px 0 rgba(90,97,105,.21),0 4px 8px rgba(90,97,105,.22),0 10px 10px rgba(90,97,105,.16),0 7px 70px rgba(90,97,105,.2);
-  background:white;
-  border-radius: 0.5em;
-  color:black;
-  display:fleX;
+.btn {
+  margin: 1em;
+  max-height: max-content;
+  max-width: max-content;
+  display: flex;
   align-items: center;
   justify-content: center;
-  transition: all 0.25s ease-out ;
 }
-.box .container {
- flex-direction: row;
- 
+
+.btn svg {
+  margin: 0px 0.5em 0px 0px;
 }
- .activities:hover {
-  background:dodgerblue;
-  color:white;
+
+.box .btn-google {
+  flex: 1;
+  background: #cb3f22;
+  }
+
+.btn-google:hover {
+  background: #a5331c;
 }
-.statusMessage {
-  padding: 0 0 0 2em  ; 
-  margin-left:-3vmin;
-  color:white;
-  line-height:0;
+
+.box .btn-github {
+  flex: 1;
+  background: #555555;
   
-  background:orange;
+}
+
+.btn-github:hover {
+  background: #333;
+}
+
+.box .btn-twitter {
+  flex: 1;
+  background: #5aa4eb;
+ }
+
+.btn-twitter:hover {
+  background: #3b82da;
+}
+
+.box .btn-facebook {
+  flex: 1;
+  background: #3b5998;
+ }
+
+.btn-facebook:hover {
+  background: #293e69
+}
+
+.box button {
+  margin-top: 1em;
+  background: dodgerblue;
+  color: white;
+  border: none;
+  border-radius: 0.5em;
+  height: 3em;
+  font-size: 1em;
+}
+
+.stats,
+.activity,
+.box,
+.activities {
+  flex: 1;
+  margin: 1em;
+
+  min-height: 5em;
+  box-shadow: 0 2px 0 rgba(90, 97, 105, .21), 0 4px 8px rgba(90, 97, 105, .22), 0 10px 10px rgba(90, 97, 105, .16), 0 7px 70px rgba(90, 97, 105, .2);
+  background: white;
+  border-radius: 0.5em;
+  color: black;
+  display: fleX;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.25s ease-out;
+}
+
+.box .container {
+  flex-direction: row;
+}
+
+.container.grid {
+  margin-top: 1em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+}
+
+.activities:hover,
+.activities.select.active {
+  background: dodgerblue;
+  color: white;
+}
+
+.statusMessage {
+  padding: 0 0 0 2em;
+  margin-left: -3vmin;
+  color: white;
+  line-height: 0;
+
+  background: orange;
   animation: slideIn 1s ease-in-out forwards;
 }
+
 @keyframes slideIn {
   to {
-    padding: 1em 0 1em 2em  ; 
-    line-height:1;
-    opacity:1;
+    padding: 1em 0 1em 2em;
+    line-height: 1;
+    opacity: 1;
   }
 }
-.stats,.activities {
-  padding:1em;
+
+.stats,
+.activities {
+  padding: 1em;
 }
-.stats,canvas,.activities {
-  min-width:17em;
-  max-width:10em;
+
+.stats,
+canvas,
+.activities {
+  min-width: 17em;
+  max-width: 10em;
   flex-direction: column;
   position: relative;
 }
+
 canvas {}
+
 .box {
   flex-direction: column;
-  margin:2em 0 1em 0;
-  padding:1em;
+  margin: 2em 0 1em 0;
+  padding: 1em;
 }
+
+li.active {
+  background-color: #2ed8b6;
+}
+
+.profile {
+  margin: 2em 0 2em 0;
+}
+
+.profile a {
+  display: block;
+}
+
+.profile a.active::before {
+  background: none;
+}
+
+.profile h4 {
+  margin: 0.25em;
+  font-weight: 800;
+}
+
+.profile h5 {
+  margin: 1em 0 0 0;
+}
+
+.profile .user-image img {
+  width: 7em;
+  height: 7em;
+  border-radius: 50%;
+  border: 6px solid #eee;
+  box-shadow: 0 0 5px dodgerblue;
+}
+
+.activity-lvl {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+
+}
+
+.activity-lvl li {
+  display: inline-block;
+  width: 15%;
+  height: 4px;
+  margin: 0 3px;
+  background-color: #ccc;
+}
+
+.activity-lvl li.active {
+  background-color: #2ed8b6;
+}
+
 .activities.select {
-  display:inline-block;
-  box-shadow: 0 0 6px  rgba(90,97,105,.41);
+  display: inline-block;
+  box-shadow: 0 0 6px rgba(90, 97, 105, .41);
   text-align: center;
-  width:120px;
-  margin:0.5em;
-  white-space: nowrap; 
-  min-height:25px;
-  max-height:25px;
-  min-width:100px;
-  max-width:100px;
+  width: 120px;
+  margin: 0.5em;
+  white-space: nowrap;
+  min-height: 25px;
+  min-width: 100px;
+  max-height: max-content;
+  display: flex;
+  max-width: max-content;
   overflow: hidden;
-  text-overflow: ellipsis; 
+  text-overflow: ellipsis;
   border: 1px solid #000000;
-    text-overflow: clip ellipsis;
-  
+  text-overflow: clip ellipsis;
+  transition: all 0.35s ease-out;
+}
+
+.btn.activities.select {
+  max-height: max-content;
+  max-width: max-content;
+  height: 5em;
+  width: 20em;
+}
+
+.field.duration {
+  display: flex;
+  flex-direction: row;
+
+  align-items: flex-end;
+}
+
+.field.duration .field {
+  margin: 0;
+}
+
+.field.duration button {
+  background: none;
+
+  cursor: pointer;
+}
+
+.field.duration button .icon-svg {
+  width: 2em;
+  height: 2em;
+  margin: 0;
+  fill: dodgerblue;
+}
+
+.field.duration .reset {
+  position: absolute;
+  right: 1em;
+  background: white;
+}
+
+.field.time {
+  margin-right: 2em !important;
 }
 
 .activities .delete {
-  
-  position:absolute;
-  right: 1em;
-  top: 0.5em;
-  font-weight:800;
+
+  position: absolute;
+  right: 0;
+  top: 0.1em;
+
+  color: black;
+  font-weight: 800;
   cursor: pointer;
+}
+
+.activities .delete .icon-svg {
+  margin: 0;
+  height: 1em;
+  fill: black;
+}
+
+.activities:hover .delete .icon-svg {
+  margin: 0;
+  height: 1em;
+  fill: white;
+}
+
+main.active .gmap {
+  width: calc(100vw - 15em);
+  ;
+  height: calc(100vh - 4em);
+  ;
+}
+
+main .gmap {
+  width: 100vw;
+  height: calc(100vh - 4em);
+  ;
+}
+
+
+.box.notfound {
+  margin-top: 4em;
+  perspective: 100%;
+}
+
+.notfound h1 {
+  width: 2em;
+  height: 2em;
+  margin-top: -2.5em;
+  margin-right: -.5em;
+  padding: 1em;
+
+  display: grid;
+  place-content: center;
+
+  color: #f5f5f5;
+  border-radius: 50%;
+  background-color: #39bbdb;
+  box-shadow: 0 0 0 15px #f0f0f0;
+}
+
+.notfound h1 span {
+  font-weight: bold;
+  transform-style: preserve-3d;
+  animation: spin 8s ease-in-out infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(720deg) rotateY(360deg);
+  }
+}
+
+
+
+/* BARCHART */
+
+.Charts {
+  margin: 0 auto;
+  background-color: #f9f9f9;
+  display: flex;
+  align-items: flex-end;
+  padding: 50px;
+}
+
+.Charts.horizontal {
+  display: block;
+}
+
+.Charts.horizontal .Charts--serie {
+  display: block;
+  margin: 0 0 30px 0;
+  border: 0;
+}
+
+.Charts.horizontal .Charts--serie label {
+  position: relative;
+  top: auto;
+  right: auto;
+  left: 0;
+  bottom: auto;
+  padding: 0 0 10px 0;
+}
+
+.Charts--serie {
+  height: 100%;
+  margin: 0 30px 0 0;
+  display: inline-block;
+  flex: 1;
+  display: flex;
+  align-items: flex-end;
+  -webkit-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+  -webkit-animation: slideUp 0.6s;
+  animation: slideUp 0.6s;
+  position: relative;
+  border-bottom: 1px solid #c2c2c2;
+}
+
+.Charts--serie.stacked {
+  display: block;
+}
+
+.Charts--serie label {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -20px;
+  font-family: Helvetica, sans-serif;
+  font-size: 10px;
+  text-align: center;
+  color: #808080;
+}
+
+.Charts.horizontal .Charts--item {
+  display: block;
+  border-radius: 0 2px 2px 0;
+  margin: 0 0 5px 0;
+  height: 1em;
+}
+
+.Charts.horizontal .Charts--item b {
+  position: absolute;
+  right: -20px;
+  top: 0.3em;
+}
+
+.Charts--item {
+  background-color: #43A19E;
+  display: inline-block;
+  margin: 0 5px 0 0;
+  flex: 1;
+  transition: height 1s ease-out, width 1s ease-out;
+  position: relative;
+  text-align: center;
+  border-radius: 2px 2px 0 0;
+}
+
+.Charts--item.layered {
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  bottom: 0;
+  margin: 0;
+}
+
+.Charts--item.layered b {
+  position: absolute;
+  right: 0;
+}
+
+.Charts--item.stacked {
+  position: relative;
+  display: block;
+  border-radius: 0;
+}
+
+.Charts--item b {
+  position: relative;
+  font-family: Helvetica, sans-serif;
+  font-size: 10px;
+  top: -20px;
+  color: #43A19E;
+}
+
+.Legend--color {
+  display: inline-block;
+  vertical-align: middle;
+  border-radius: 2px;
+  width: 16px;
+  height: 16px;
+}
+
+.Legend--label {
+  display: inline-block;
+  vertical-align: middle;
+  font-family: Helvetica, sans-serif;
+  font-size: 12px;
+  margin: 0 0 0 5px;
+}
+
+@-webkit-keyframes slideUp {
+  from {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+
+  to {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    -webkit-transform: scaleY(0);
+    transform: scaleY(0);
+  }
+
+  to {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1);
+  }
+}
+
+
+/* DROPDOWN*/
+
+.wrapper {
+  position: relative;
+}
+
+.wrapper ul {
+  opacity: 0;
+  height: 0;
+  width: auto;
+  visibility: hidden;
+  text-align: left;
+  transition: all 900ms;
+}
+
+.wrapper:hover ul {
+  opacity: 1;
+  padding: 4px 0;
+  height: 90px;
+  visibility: visible;
+}
+
+.wrapper label {
+  border-bottom: 1px dotted #cccccc;
+}
+
+.wrapper ul {
+  position: absolute;
+
+  top: 28px;
+  right: 0;
+
+  background-color: white;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  box-shadow: 0 3px rgba(0, 0, 0, 0.05);
+  list-style-type: none;
+}
+
+/*
+.wrapper ul:before {
+  content: '';
+  position: absolute;
+  top: -12px;
+  height: 12px;
+  width: 100%;
+  background-color: transparent;
+}
+.wrapper ul:after {
+  content: '';
+  position: absolute;
+  right: 6px;
+  top: -16px;
+  height: 0;
+  width: 0;
+  border: 8px solid transparent;
+  border-bottom-color: #cccccc;
+}
+*/
+.wrapper li {
+  padding: 5px 10px;
+  color: #999999;
+  cursor: pointer;
+  transition: all 100ms;
+}
+
+.wrapper li:hover {
+  background-color: #e6e6e6;
+  color: black;
+}
+
+li:first-of-type:after {
+  content: '';
+  position: absolute;
+  right: 6px;
+  top: -15px;
+  height: 0;
+  width: 0;
+  z-index: 1;
+  border: 8px solid transparent;
+  border-bottom-color: white;
+  pointer-events: none;
 }
